tests/integration/snapshots/integration_tests__integration__snapshot_tests__error_invalid_json.snap
---
source: tests/integration/snapshot_tests.rs
expression: normalized
---
Error: Failed to parse scripts: Failed to parse package.json: key must be a string at line 1 column 3
  at line 1, column 3:
    { invalid json }
      ^
